--- a/Client/Application/src/app/pages/settings/settings.component.scss
+++ b/Client/Application/src/app/pages/settings/settings.component.scss
@@ -3,3 +3,12 @@ ion-item {
     --background: transparent
 
 }
+
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
+}
