Fixed Images Display on App and Website Password🏁
1. N/A
2. 10
3. Completed the design of the images on the app and fixed an issue related to the password showing in the input field box.

--- a/Client/Application/src/app/pages/authentication/login/login.component.scss
+++ b/Client/Application/src/app/pages/authentication/login/login.component.scss
@@ -8,9 +8,10 @@
 
 .header-1 {
 
-    position: fixed;
+    position: absolute;
     top: 3%;
     width: 8%;
+    margin-top: 8px;
 
 }
 
@@ -30,6 +31,7 @@
     line-height: 48px;
     width: 60%;
     margin-bottom: 16px;
+    margin-top: 24px;
 
     color: var(--ion-color-dark);
 }
