--- a/Client/Application/src/app/pages/authentication/login/login.component.html
+++ b/Client/Application/src/app/pages/authentication/login/login.component.html
@@ -1,8 +1,8 @@
 <div style="height: 100%; background-color: var(--ion-color-light)">
 
 
-    <ion-img class="header-1 center" [style.backgroundImage]="'url(' + login_bg1 + ')'"></ion-img>
-    <ion-img class="header-1 center" [style.backgroundImage]="'url(' + login_bg1 + ')'"></ion-img>
+    <ion-img [src]="login_bg2" style="position: absolute;margin-top: 16px;" class="header1 center"></ion-img>
+    <ion-img [src]="login_bg1" style="position: absolute;top: 36%;transform: translateY(-64%);margin: 0px 16px 32px 16px;" ></ion-img>
     <div class="labels">
         <ion-text class="title">Login Now</ion-text>
         <ion-input [(ngModel)]="email" placeholder="Email" class="input"></ion-input>
