--- a/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.scss
@@ -40,7 +40,7 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
-    
+
     width: 50%
 }
 
@@ -53,18 +53,53 @@
 
 }
 
+.date-container {
+
+    width: 80%;
+    background-color: var(--ion-color-light);
+    // width: auto;
+    border-radius: 10px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+}
+
 .label {
 
-    font-family: 'Abhaya Libre';
+    font-family: 'Kulim Park';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    margin-top: 16px;
+    line-height: 23px;
+    letter-spacing: 0.07em;
+    color: var(--ion-color-dark);
 
-    text-transform: capitalize;
+}
 
+.number {
+
+    font-family: 'Kulim Park';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    display: inline;
+    margin: 16px;
+    letter-spacing: 0.07em;
+
+
+}
+
+.sublabel {
+
+    font-family: 'Kulim Park';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 17px;
+    letter-spacing: 0.03em;
     color: var(--ion-color-dark);
 
 }
@@ -72,12 +107,15 @@
 .title {
 
 
-    font-family: 'Abhaya Libre';
+    font-family: 'Kulim Park';
     font-style: normal;
     font-weight: 400;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.02em;
+    font-size: 24px;
+    line-height: 60px;
+    letter-spacing: 0.07em;
+    text-align: center;
+    margin-top: 32px;
+    text-transform: uppercase;
 
     color: var(--ion-color-dark);
 }
@@ -89,6 +127,36 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     top: 0%;
+    --background: var(--ion-color-primary);
+    --color: var(--ion-color-light);
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
+
+}
+
+.submit {
+
+    --border-radius: 50px;
+
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+    font-family: 'Kulim Park';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+
+}
+
+.back-btn-2 {
+
+    margin: 16px;
+
+    position: absolute;
+
     --background: var(--ion-color-primary);
     --color: var(--ion-color-light);
     --box-shadow: none;
@@ -118,5 +186,18 @@
     // left: 50%;
     // transform: translateX(-50%);
     // position: absolute;
+
+}
+
+.quantity-btn {
+
+    --background: transparent;
+    border: solid 1px gray;
+    border-radius: 50px;
+    display: inline-block;
+    --color: var(--ion-color-dark);
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
 
 }
