--- a/Client/Application/src/app/tabs/tabs.page.html
+++ b/Client/Application/src/app/tabs/tabs.page.html
@@ -50,6 +50,14 @@
       <br>
       <br>
       <br>
+      <ion-menu-toggle>
+        <ion-text (click)="openAnnouncements()" class="tabs">
+          {{ 'annoucements' | translate}}
+        </ion-text>
+      </ion-menu-toggle>
+      <br>
+      <br>
+      <br>
       <ng-container *ngIf="isAdmin()">
         <ion-menu-toggle>
           <ion-text (click)="openAdmin()" class="tabs">
