--- a/Client/Application/src/app/tabs/tabs.page.scss
+++ b/Client/Application/src/app/tabs/tabs.page.scss
@@ -12,6 +12,7 @@
 
 }
 
+
 .user-name {
 
     font-family: 'Asap';
@@ -24,7 +25,7 @@
 }
 
 .burger-btn {
-
+    
     --background: transparent;
     --background-activated-opacity: 0;
     --background-focused-opacity: 0;
@@ -33,7 +34,7 @@
 }
 
 .block-container {
-
+    
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -47,63 +48,63 @@
 }
 
 .block-container-active {
-
+    
     padding: 0px 8px;
     background-color: white;
     width: 100%;
     // height: 100%;
-
+    
 
 }
 
 .block-container-active2 {
-
+    
     transition: all 250ms ease-in-out;
     padding: 8px 2px 8px 8px;
     background-color: var(--ion-color-light);
     width: 100%;
     // height: 100%;
-
-
+    
+    
 }
 
 .block-container-inactive {
-
+    
     transition: all 250ms ease-in-out;
     // padding: 6px 0px;
     background-color: transparent;
-
+    
 }
 
 .tab {
-
+    
     background-color: transparent;
     display: inline-block;
-
-
+    
+    
 }
 
 .cell {
-
+    
     padding: 0px 0px;
-
+    
 }
 
 
 .active-text {
-
+    
     visibility: visible;
-
+    
 }
 
 .inactive-text {
-
+    
     visibility: hidden;
-
+    
 }
 
 .text-active {
-
+    
     transition: all 2500ms ease-in-out;
     margin: 4px;
     font-family: 'Asap';
@@ -116,18 +117,18 @@
 
 
     color: var(--ion-color-primary);
-
+    
 }
 
 .image {
 
     display: inline;
     width: 6vw;
-
+    
 }
 
 .tabs {
-
+    
     margin: 24px;
     font-family: 'Asap';
     font-style: normal;
@@ -141,22 +142,84 @@
 }
 
 .bottom {
-
+    
     margin: 24px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
-
+    
     color: var(--ion-color-dark);
+    
 
-
-
+    
 }
 
 .menu-content {
-
+    
     width: 30% !important;
+    
+}
+$primary-color: var(--ion-color-primary);
+
+.label {
+    
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Roboto';
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    text-align: start;
+    display: inline;
+    color: var(--ion-color-dark);
+    
+}
+
+.mark {
+    
+    color: var(--ion-color-dark);
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Roboto';
+    padding-bottom: 0px;
+    margin-top: 0px;
+    text-align: start;
+    display: inline;
+
+}
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+    color: var(--ion-color-dark);
+
+}
+.header-3 {
+    
+    font-family: 'Asap';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    margin-left: 8px;
+    
+    text-transform: uppercase;
+    line-height: 28px;
+    
+    color: var(--ion-color-dark);
+}
+.announcements {
+    
+
+    width: 90%;
+    padding: 24px;
+    border-radius: 40px;
+    background-color: var(--ion-color-light);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 
 }
