Completed the Recommendation algorithm🏁
1. N/A
2. 10
3. Completed the backend recommendation algorithm

--- a/Client/Application/src/app/tabs/tabs.page.html
+++ b/Client/Application/src/app/tabs/tabs.page.html
@@ -63,14 +63,14 @@
 
       <hr style="border-bottom:1px solid var(--ion-color-dark); width: 85%;">
       <br>
-      <ion-text class="bottom">
+      <!-- <ion-text class="bottom">
         {{'about_us' | translate}}
       </ion-text>
       <br>
       <ion-text class="bottom">
         {{'terms_conditions' | translate}}
       </ion-text>
-      <br>
+      <br> -->
       <ion-menu-toggle>
         <ion-text class="bottom" (click)="logout()">
           {{'logout' | translate}}
