--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
@@ -12,7 +12,7 @@
   <div style="display: flex;">
 
     <ion-button (click)="openQuick()" class="options">{{ 'Find' | translate }}</ion-button>
-    <ion-button class="options">{{ 'Recommend' | translate }}</ion-button>
+    <ion-button (click)="openRecommend()" class="options">{{ 'Recommend' | translate }}</ion-button>
 
   </div>
   <br><br>
