--- a/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/quick-availability/quick-availability.component.scss
@@ -10,6 +10,7 @@
     background-color: var(--ion-color-light);
     position: fixed;
     bottom: 0px;
+    overflow-y: auto;
     left: 50%;
     transform: translateX(-50%);
 
@@ -123,10 +124,11 @@
 .back-btn {
 
     // margin: 16px;
-    position: absolute;
+    position: fixed;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    top: 0%;
+    top: 20%;
+    z-index: 1;
     --background: var(--ion-color-primary);
     --color: var(--ion-color-light);
     --box-shadow: none;
