--- a/Client/Application/src/app/pages/guest/rooms/recommend/recommend.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/recommend/recommend.component.scss
@@ -9,6 +9,7 @@
     border-top-left-radius: 40px;
     background-color: var(--ion-color-light);
     position: fixed;
+    overflow-y: auto;
     bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
@@ -123,10 +124,11 @@
 .back-btn {
 
     // margin: 16px;
-    position: absolute;
+    position: fixed;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    top: 0%;
+    top: 20%;
+    z-index: 1;
     --background: var(--ion-color-primary);
     --color: var(--ion-color-light);
     --box-shadow: none;
