--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -81,6 +81,13 @@
     position: absolute;
 
 }
+.review {
+
+    bottom: 36px;
+    right: 36px;
+    position: absolute;
+
+}
 
 .input {
 
@@ -95,6 +102,7 @@
     text-transform: capitalize;
 
 }
+
 .quantity_btn {
 
     display: inline-block;
@@ -107,8 +115,8 @@
 
 }
 
-.seats{
-    color:var(--ion-color-primary);
+.seats {
+    color: var(--ion-color-primary);
 }
 
 
@@ -133,6 +141,15 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
-    
+
     width: 50%
+}
+
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
 }
