--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -1,108 +1,113 @@
+<ion-content>
 
-<img [src]="profile_bg" style="position: absolute;">
+    <img [src]="profile_bg" style="position: absolute;">
 
-<div class="container">
-        
+    <div class="container">
+
         <ion-text class="name">{{ user.first_name + ' ' + user.last_name}}</ion-text>
-    <ion-button class="promo" fill="clear">{{ 'Apply Promo Code' | translate }}</ion-button>
-    <div style="display: flex;">
+        <ion-button class="promo" fill="clear">{{ 'Apply Promo Code' | translate }}</ion-button>
+        <div style="display: flex;">
 
-        <ion-button class="options">{{ 'Edit Profile' | translate }}</ion-button>
-        <ion-button class="options">{{ 'Change Password' | translate }}</ion-button>
+            <ion-button class="options">{{ 'Edit Profile' | translate }}</ion-button>
+            <ion-button class="options">{{ 'Change Password' | translate }}</ion-button>
 
-    </div>
-
-    <div style="display: flex;  overflow-x: scroll">
-
-        <div style="flex-wrap: nowrap; position: relative;" *ngFor="let order of orders | keyvalue">
-
-            <ng-container *ngIf="order.value.food.length">
-
-                <ion-img class="order-imgs" [src]="foods.get(order.value.food[0].id)?.image"
-                    (click)="openModal(formatOrder(order))">
-                </ion-img>
-            </ng-container>
         </div>
-    </div>
-    
-    <ion-segment (ionChange)="onSegmentChange($event)">
-        <div [style.borderBottomColor]="selected == 'rooms' ? 'var(--ion-color-primary)' : '#B1B8C3'"
-        style="border-bottom: 1px solid var(--ion-color-primary); width: 50%; margin: 0; transition: all 250ms ease-in-out;">
-        
-        <ion-segment-button value="rooms">
-            <img style="transition: all 500ms ease-in-out;" height="50%"
-            [src]="selected != 'rooms' ?  '../../../../assets/profile-pics/room-segment.png' : '../../../../assets/profile-pics/room-segment-active.png'">
-        </ion-segment-button>
-    </div>
-    <div [style.borderBottomColor]="selected == 'services' ? 'var(--ion-color-primary)' : '#B1B8C3'"
-    style="width: 50%; margin: 0; border-bottom: 1px solid var(--ion-color-primary); transition: all 250ms ease-in-out;">
-    
-    <ion-segment-button value="services">
-        <img style="transition: all 500ms ease-in-out;" height="50%"
-        [src]="selected != 'services' ?  '../../../../assets/profile-pics/services-segment.png' : '../../../../assets/profile-pics/services-segment-active.png'">
-    </ion-segment-button>
-</div>
-</ion-segment>
-<ion-content style="--background: var(--ion-color-light)">
 
-        <ion-modal *ngIf="active_data" [enterAnimation]="enterAnimation" [leaveAnimation]="leaveAnimation" class="modal"
-            [isOpen]="isModalOpen">
-            <ng-template>
-                <app-profile-modal (closeModal)="closeModal()" [data]="active_data"
-                style="height: 100%;"></app-profile-modal>
-            </ng-template>
-        </ion-modal>
-        
-        <ng-container *ngIf="selected==='rooms'">
-            
-            <table style="width:100%;table-layout: fixed;">
-                
-                <tr *ngFor="let booking of booking_array; let i = index">
-                    
-                    <td *ngFor="let x of [0,1,2]" style="margin: 12px;">
-                        
-                        
-                        <div class="square">
-                            <img *ngIf="booking_array[x + i * 3]"
-                            [src]="rooms.get(booking_array[x + i * 3][1].room_id || '0')?.images?.at(0)"
-                            onerror="this.src='assets/placeholder.png'" class="booking-imgs" (click)="openModal(formatBooking({
+        <div style="display: flex;  overflow-x: scroll">
+
+            <div style="flex-wrap: nowrap; position: relative;"
+                *ngFor="let order of orders | keyvalue">
+
+                <ng-container *ngIf="order.value.food.length">
+
+                    <ion-img class="order-imgs" [src]="foods.get(order.value.food[0].id)?.image"
+                        (click)="openModal(formatOrder(order))">
+                    </ion-img>
+                </ng-container>
+            </div>
+        </div>
+
+        <ion-segment (ionChange)="onSegmentChange($event)">
+            <div [style.borderBottomColor]="selected == 'rooms' ? 'var(--ion-color-primary)' : '#B1B8C3'"
+                style="border-bottom: 1px solid var(--ion-color-primary); width: 50%; margin: 0; transition: all 250ms ease-in-out;">
+
+                <ion-segment-button value="rooms">
+                    <img style="transition: all 500ms ease-in-out;" height="50%"
+                        [src]="selected != 'rooms' ?  '../../../../assets/profile-pics/room-segment.png' : '../../../../assets/profile-pics/room-segment-active.png'">
+                </ion-segment-button>
+            </div>
+            <div [style.borderBottomColor]="selected == 'services' ? 'var(--ion-color-primary)' : '#B1B8C3'"
+                style="width: 50%; margin: 0; border-bottom: 1px solid var(--ion-color-primary); transition: all 250ms ease-in-out;">
+
+                <ion-segment-button value="services">
+                    <img style="transition: all 500ms ease-in-out;" height="50%"
+                        [src]="selected != 'services' ?  '../../../../assets/profile-pics/services-segment.png' : '../../../../assets/profile-pics/services-segment-active.png'">
+                </ion-segment-button>
+            </div>
+        </ion-segment>
+        <ion-content style="--background: var(--ion-color-light)">
+
+            <ion-modal *ngIf="active_data" [enterAnimation]="enterAnimation"
+                [leaveAnimation]="leaveAnimation" class="modal" [isOpen]="isModalOpen">
+                <ng-template>
+                    <app-profile-modal (closeModal)="closeModal()" [data]="active_data"
+                        style="height: 100%;"></app-profile-modal>
+                </ng-template>
+            </ion-modal>
+
+            <ng-container *ngIf="selected==='rooms'">
+
+                <table style="width:100%;table-layout: fixed;">
+
+                    <tr *ngFor="let booking of booking_array; let i = index">
+
+                        <td *ngFor="let x of [0,1,2]" style="margin: 12px;">
+
+
+                            <div class="square">
+                                <img *ngIf="booking_array[x + i * 3]"
+                                    [src]="rooms.get(booking_array[x + i * 3][1].room_id || '0')?.images?.at(0)"
+                                    onerror="this.src='assets/placeholder.png'" class="booking-imgs"
+                                    (click)="openModal(formatBooking({
                                 
                                 key: booking_array[x + i * 3][0],
                                 value: booking_array[x + i * 3][1]
                             }))">
-                        </div>
-                    </td>
-                </tr>
-                
-            </table>
-            
-        </ng-container>
-        
-        
-        <ng-container *ngIf="selected==='services'">
+                            </div>
+                        </td>
+                    </tr>
 
-            <table style="width:100%;table-layout: fixed;">
-                
-                <tr *ngFor="let activity of registration_array; let i = index">
-                    
-                    <td *ngFor="let x of [0,1,2]" style="margin: 12px;">
-                        
-                        <div class="square">
-                            <img *ngIf="registration_array[x + i * 3]"
-                            [src]="activities.get(registration_array[x + i * 3][1].activity_id)?.image?.at(0)"
-                            onerror="this.src='assets/placeholder.png'" class="booking-imgs" (click)="openModal(formatActivity({
-                                    key: registration_array[x + i * 3][0],
-                                    value: registration_array[x + i * 3][1]
-                                }))">
-                        </div>
-                    </td>
-                </tr>
-                
-            </table>
-            
-        </ng-container>
-    </ion-content>
-    
-    
-    
-</div>
+                </table>
+
+            </ng-container>
+
+
+            <ng-container *ngIf="selected==='services'">
+
+                <table style="width:100%;table-layout: fixed;">
+
+                    <tr *ngFor="let activity of registration_array; let i = index">
+
+                        <td *ngFor="let x of [0,1,2]" style="margin: 12px;">
+
+                            <div class="square">
+                                <img *ngIf="registration_array[x + i * 3]"
+                                    [src]="activities.get(registration_array[x + i * 3][1].activity_id)?.image?.at(0)"
+                                    onerror="this.src='assets/placeholder.png'" class="booking-imgs"
+                                    (click)="openModal(formatActivity({
+                                key: registration_array[x + i * 3][0],
+                                value: registration_array[x + i * 3][1]
+                            }))">
+                            </div>
+                        </td>
+                    </tr>
+
+                </table>
+
+            </ng-container>
+        </ion-content>
+
+
+    </div>
+
+</ion-content>
