Added the option to see order status🏁
1. N/A
2. 10
3. Added the option to see the order status of a not delivered order

--- a/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
+++ b/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
@@ -7,8 +7,8 @@
         <tr>
             <td style="padding: 16px; width: 40%">
 
-                <img style="vertical-align: middle; object-fit: cover; padding: 0;" width="480vh" height="360vh"
-                    [src]="image" onerror="this.src='assets/placeholder.png'">
+                <img style="vertical-align: middle; object-fit: cover; padding: 0;" width="480vh"
+                    height="360vh" [src]="image" onerror="this.src='assets/placeholder.png'">
 
             </td>
             <td style="padding: 16px; width: 100%;">
@@ -46,7 +46,8 @@
                                 </p>
                             </td>
                             <td style="width: 50%;">
-                                <button [disabled]="!quantity" (click)="addToCart()" class="add-btn">
+                                <button [disabled]="!quantity" (click)="addToCart()"
+                                    class="add-btn">
                                     {{ 'add_cart' | translate }}
                                 </button>
                             </td>
