Cleaned First Chunk of the Application🏁
1. N/A
2. 10
3. Removing comments, unused variables and imports, along with sorting variables and methods.

--- a/Client/Application/src/app/components/database/blocks/filter/filter.component.html
+++ b/Client/Application/src/app/components/database/blocks/filter/filter.component.html
@@ -28,11 +28,10 @@
                   (input)="applyFilter(!!$event)"></mat-checkbox>
           </ng-container>
           
+          <!-- stars -->
           
           <ng-container *ngIf="filter_by && filter_by.type === 'rating'">
-              <!-- <star-rating size="large" style="display: inline;" staticColor="ok"
-                  (ratingChange)="updateFilterValue($event.rating); applyFilter(true)"
-                  [rating]="parseInt(filter)"></star-rating> -->
+             "star placeholder"
           </ng-container>
 
 
