--- a/Client/Website/src/app/pages/guest/profile/edit-profile/edit-profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/edit-profile/edit-profile.component.html
@@ -80,7 +80,7 @@
 </div>
 <div mat-dialog-actions>
     <button style="width: 30%;" class="back-btn" (click)="confirmChanges(user)"
-        [disabled]="identical || !user.email || !user.first_name || !user.last_name || !user.date_of_birth || !user.phone || !user.gender"
+        [disabled]="identical || !user.email || !user.first_name || !user.last_name || !user.date_of_birth || !user.phone"
         mat-button color="primary">
         {{'confirm changes'|translate}}
     </button>
