--- a/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -28,7 +28,7 @@
 
 <div style="display: flex;justify-content: center;">
     <button [routerLink]="['/restaurant/menu']" class="menu-button">{{"view_menu" | translate}}</button>
-    <button class="feedback-button">{{"feedback" | translate}}</button>
+    <button [routerLink]="['/adminchat']" class="feedback-button">{{"feedback" | translate}}</button>
 </div>
 
 <app-footer main_color="#14274A" font_color="white"></app-footer>
