--- a/Client/Application/src/app/pages/authentication/login/login.component.html
+++ b/Client/Application/src/app/pages/authentication/login/login.component.html
@@ -8,7 +8,7 @@
         <ion-input [(ngModel)]="email" placeholder="Email" class="input"></ion-input>
         <ion-input type="password" [(ngModel)]="password" placeholder="Password"
             class="input"></ion-input>
-        <ion-text class="password">Forgot Password?</ion-text>
+        <ion-text [routerLink]="['/auth/forgot']" class="password">Forgot Password?</ion-text>
         <ion-button (click)="login()" class="login">Login</ion-button>
         <ion-text class="register">Don't have an Account <a [routerLink]="['../register']"
                 class="register-button">Sign-up</a></ion-text>
