Implemented change password🏁
1. N/A
2. 10
3. Implemented change password

--- a/Client/Application/src/app/pages/authentication/forgot/forgot.component.html
+++ b/Client/Application/src/app/pages/authentication/forgot/forgot.component.html
@@ -3,7 +3,7 @@
     <div class="labels">
 
 
-        <ion-text class="title">{{'Verify Email' | translate}}</ion-text>
+        <ion-text class="title">{{'Forget Password' | translate}}</ion-text>
 
         <ion-input class="inputs" label="Email" labelPlacement="floating" [(ngModel)]="email"
             class="input"></ion-input>
@@ -16,7 +16,7 @@
             class="input"></ion-input>
 
         <ion-button (click)="send()" class="register">{{'Send' | translate}}</ion-button>
-        <ion-button class="register" (click)="verify()">{{'Verify' | translate}}</ion-button>
+        <ion-button class="register" (click)="verify()">{{'Reset' | translate}}</ion-button>
         <ion-text class="login" (click)="login()">{{'Login again' | translate}}</ion-text>
     </div>
 </div>
