--- a/Client/Application/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Application/src/app/pages/guest/profile/profile.component.html
@@ -9,7 +9,7 @@
         <div style="display: flex;">
 
             <ion-button [routerLink]="['/profile/edit']" class="options">{{ 'Edit Profile' | translate }}</ion-button>
-            <ion-button class="options">{{ 'Change Password' | translate }}</ion-button>
+            <ion-button [routerLink]="['/auth/change']" class="options">{{ 'Change Password' | translate }}</ion-button>
 
         </div>
 
