--- a/Client/Application/src/app/pages/guest/profile/change-password/change-password.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/change-password/change-password.component.scss
@@ -1,162 +1,149 @@
-.half-width {
-    width: 50%;
-}
 
-.full-width {
+.input {
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    // size: 14px;
+    // --padding-top: 12px;
+    // --padding-bottom: 12px;
+    line-height: 20px;
+    --padding-start: 16px;
+    border-radius: 8px;
+    
     width: 100%;
-}
+    background-color: rgba(217, 217, 217, 0.4);
+    margin-bottom: 16px;
 
-.padded {
-    padding-left: 32px;
-    padding-right: 32px;
 }
 
 .back-btn {
 
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-
-    border-radius: 0px;
-
-    padding: 48px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-
-    text-transform: uppercase;
-
-    background-color: var(--ion-color-primary);
-
-    color: var(--ion-color-light);
-
-    display: flex;
-    width: fit-content !important;
-    margin: auto;
-
-    margin-bottom: 32px;
-    text-align: center;
-
-}
-
-.delete-btn {
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-
-    border-radius: 0px;
-
-    padding: 16px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
-    text-transform: uppercase;
-
-    background-color: #A4274A;
-
-    color: var(--ion-color-light);
-
-}
-
-.content {
-
-    padding: 16px;
+    position: fixed;
     margin: 16px;
-    margin-top: 0px;
+    --background: transparent;
+    --color: var(--ion-color-light);
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
+
+}
+.back-btn-2 {
+
+    margin: 16px;
+    --background: transparent;
+    --color: var(--ion-color-dark);
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
 
 }
 
-.mat-mdc-dialog-content {
-    padding: 24px 42px 0px 42px;
+.date-container {
+
+    width: 80%;
+    background-color: var(--ion-color-light);
+    // width: auto;
+    border-radius: 10px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
 }
 
-.example-high {
+.modal {
 
-    height: 100px;
+    --background: transparent;
+    width: 100%;
+    height: 100%;
+
+}
+
+
+.labels {
+
+    position: relative;
+    padding-top: 5%;
+    top: 25%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--ion-color-light);
+
+}
+
+
+.input {
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    --padding-start: 16px;
+    border-radius: 8px;
+    width: 80%;
+    background-color: rgba(217, 217, 217, 0.4);
+    margin-bottom: 16px;
 
 }
 
 .title {
 
-    font-family: 'Abhaya Libre';
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 50px;
-    text-align: center;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: var(--ion-color-primary);
-    margin: 64px;
+    font-size: 48px;
+    line-height: 48px;
+    width: 75%;
+    margin-bottom: 32px;
 
+    color: var(--ion-color-dark);
 }
 
-.input {
-
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    letter-spacing: 0.05em;
-    color: var(--ion-color-primary);
-    width: 20vw;
-    margin: auto;
-    display: flex;
-}
-
-.number-error-2 {
-    @extend .number-error;
-    display: flex;
-    justify-content: center;
-}
-.number-error {
-    color: #8a0d0d;
-    font-size: smaller;
-}
-
-.image-btn {
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    padding: 8px;
-
-    height: 100%;
-    width: 100%;
-
-    background-color: var(--ion-color-light);
-
-    color: var(--ion-color-primary);
-
-    border: 1px solid var(--ion-color-primary);
-
-}
-
-.label {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    color: var(--ion-color-primary);
-}
 
 .register {
 
-    color: var(--ion-color-primary);
-    padding-top: 32px;
-    display: flex;
-    justify-content: center;
-    font-family: 'Montserrat';
-    font-size: 14px;
+    --padding: 16px 30px;
+    text-transform: capitalize;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: center;
+
+    color: #FFFFFF;
+
+    width: 80%;
+
+    --background: #930000;
+    --border-radius: 100px;
 
 }
 
-.forgot-pass {
+.login {
 
-    color: var(--ion-color-primary);
-    float: right;
-    font-family: 'Montserrat';
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
     font-size: 14px;
+    margin-top: 16px;
+    line-height: 23px;
+
+    color: var(--ion-color-dark);
+
+}
+
+.login-button {
+
+    color: #930000;
+    font-weight: 700;
+    text-decoration: none;
 }
